update profile user

--- a/backend/movie_booking/src/main/resources/messages_vi.properties
+++ b/backend/movie_booking/src/main/resources/messages_vi.properties
@@ -1,99 +1,108 @@
 # Movie Management
-movie.notfound=Không tìm th?y phim
-movie.delete.success=Xóa phim thành công
-movie.add.success=Thêm phim thành công
-movie.update.success=C?p nh?t phim thành công
-movie.add.failed=Thêm phim th?t b?i
-movie.invalid=D? li?u phim không h?p l?
+movie.notfound=Khï¿½ng tï¿½m th?y phim
+movie.delete.success=Xï¿½a phim thï¿½nh cï¿½ng
+movie.add.success=Thï¿½m phim thï¿½nh cï¿½ng
+movie.update.success=C?p nh?t phim thï¿½nh cï¿½ng
+movie.add.failed=Thï¿½m phim th?t b?i
+movie.invalid=D? li?u phim khï¿½ng h?p l?
 
 # Room Management
-room.notfound=Không tìm th?y phòng
-room.delete.success=Xóa phòng thành công
-room.delete.failed=Xóa phòng th?t b?i
-room.add.success=Thêm phòng thành công
-room.add.failed=Thêm phòng th?t b?i
-room.update.success=C?p nh?t phòng thành công
-room.update.failed=C?p nh?t phòng th?t b?i
-room.seats.invalid=S? l??ng gh? không ???c âm
+room.notfound=Khï¿½ng tï¿½m th?y phï¿½ng
+room.delete.success=Xï¿½a phï¿½ng thï¿½nh cï¿½ng
+room.delete.failed=Xï¿½a phï¿½ng th?t b?i
+room.add.success=Thï¿½m phï¿½ng thï¿½nh cï¿½ng
+room.add.failed=Thï¿½m phï¿½ng th?t b?i
+room.update.success=C?p nh?t phï¿½ng thï¿½nh cï¿½ng
+room.update.failed=C?p nh?t phï¿½ng th?t b?i
+room.seats.invalid=S? l??ng gh? khï¿½ng ???c ï¿½m
 
 # Showtime Management
-showtime.add.success=Thêm su?t chi?u thành công v?i ID: {0}
-showtime.add.failed=Thêm su?t chi?u th?t b?i: {0}
-showtime.update.success=C?p nh?t su?t chi?u thành công v?i ID: {0}
+showtime.add.success=Thï¿½m suï¿½t chi?u thï¿½nh cï¿½ng v?i ID: {0}
+showtime.add.failed=Thï¿½m suï¿½t chi?u th?t b?i: {0}
+showtime.update.success=C?p nh?t su?t chi?u thï¿½nh cï¿½ng v?i ID: {0}
 showtime.update.failed=C?p nh?t su?t chi?u th?t b?i: {0}
-showtime.invalid=Su?t chi?u ph?i liên k?t v?i phòng và phim h?p l?
+showtime.invalid=Su?t chi?u ph?i liï¿½n kï¿½t v?i phï¿½ng vï¿½ phim h?p l?
 
 # User Management
-user.notfound=Không tìm th?y ng??i dùng
-user.delete.success=Xóa ng??i dùng thành công
-user.delete.multiple.success=Xóa thành công {0} ng??i dùng
-user.delete.multiple.partial=M?t s? ng??i dùng không tìm th?y. ?ã xóa {0} ng??i dùng, {1} không tìm th?y
-user.delete.multiple.empty=Danh sách ng??i dùng c?n xóa không ???c ?? tr?ng
-user.add.success=??ng kı ng??i dùng thành công
-user.update.success=C?p nh?t ng??i dùng thành công
-user.add.failed=??ng kı ng??i dùng th?t b?i
-user.email.exists=Email ?ã ???c ??ng kı
-user.password.empty=M?t kh?u không ???c ?? tr?ng khi thêm m?i
-user.password.short=M?t kh?u ph?i t? 8 kı t? tr? lên
-user.password.mismatch=M?t kh?u xác nh?n không kh?p
-user.role.invalid=Vai trò không h?p l?: {0}
-user.id.notfound=Ng??i dùng v?i ID {0} không tìm th?y
+user.notfound=Khï¿½ng tï¿½m th?y ng??i dï¿½ng
+user.delete.success=Xï¿½a ng??i dï¿½ng thï¿½nh cï¿½ng
+user.delete.multiple.success=Xï¿½a thï¿½nh cï¿½ng {0} ng??i dï¿½ng
+user.delete.multiple.partial=M?t s? ng??i dï¿½ng khï¿½ng tï¿½m th?y. ?ï¿½ xï¿½a {0} ng??i dï¿½ng, {1} khï¿½ng tï¿½m th?y
+user.delete.multiple.empty=Danh sï¿½ch ng??i dï¿½ng c?n xï¿½a khï¿½ng ???c ?? tr?ng
+user.add.success=??ng kï¿½ ng??i dï¿½ng thï¿½nh cï¿½ng
+user.update.success=C?p nh?t ng??i dï¿½ng thï¿½nh cï¿½ng
+user.add.failed=??ng kï¿½ ng??i dï¿½ng th?t b?i
+user.email.exists=Email ?ï¿½ ???c ??ng kï¿½
+user.password.empty=M?t kh?u khï¿½ng ???c ?? tr?ng khi thï¿½m m?i
+user.password.short=M?t kh?u ph?i t? 8 kï¿½ t? tr? lï¿½n
+user.password.mismatch=M?t kh?u xï¿½c nhï¿½n khï¿½ng kh?p
+user.role.invalid=Vai trï¿½ khï¿½ng h?p l?: {0}
+user.id.notfound=Ng??i dï¿½ng v?i ID {0} khï¿½ng tï¿½m th?y
 
 # Authentication
-auth.login.success=??ng nh?p thành công
-auth.login.failed=Email ho?c m?t kh?u không ?úng
-auth.login.page=Vui lòng ??ng nh?p b?ng POST /login
-auth.register.success=Vui lòng ki?m tra email ?? xác minh tài kho?n
-auth.register.failed=??ng kı th?t b?i: {0}
-auth.verify.success=Xác minh email thành công. B?n có th? ??ng nh?p ngay
-auth.verify.failed=Xác minh th?t b?i: {0}
-auth.verify.invalid=Mã xác minh không h?p l?
-auth.verify.expired=Mã xác minh ?ã h?t h?n
-auth.verify.notforregister=Mã này không dùng ?? xác minh ??ng kı
-auth.forgot.success=Vui lòng ki?m tra email ?? ??t l?i m?t kh?u
-auth.forgot.failed=Yêu c?u ??t l?i m?t kh?u th?t b?i: {0}
-auth.forgot.empty=Email không ???c ?? tr?ng
-auth.forgot.notfound=Email không t?n t?i
-auth.forgot.pending=Email ?ang ch? xác minh ??ng kı
-auth.reset.success=??t l?i m?t kh?u thành công. B?n có th? ??ng nh?p ngay
+auth.login.success=??ng nh?p thï¿½nh cï¿½ng
+auth.login.failed=Email ho?c m?t kh?u khï¿½ng ?ï¿½ng
+auth.login.page=Vui lï¿½ng ??ng nh?p b?ng POST /login
+auth.register.success=Vui lï¿½ng ki?m tra email ?? xï¿½c minh tï¿½i kho?n
+auth.register.failed=??ng kï¿½ thï¿½t b?i: {0}
+auth.verify.success=Xï¿½c minh email thï¿½nh cï¿½ng. B?n cï¿½ th? ??ng nh?p ngay
+auth.verify.failed=Xï¿½c minh thï¿½t b?i: {0}
+auth.verify.invalid=Mï¿½ xï¿½c minh khï¿½ng h?p l?
+auth.verify.expired=Mï¿½ xï¿½c minh ?ï¿½ h?t h?n
+auth.verify.notforregister=Mï¿½ nï¿½y khï¿½ng dï¿½ng ?? xï¿½c minh ??ng kï¿½
+auth.forgot.success=Vui lï¿½ng ki?m tra email ?? ??t l?i m?t kh?u
+auth.forgot.failed=Yï¿½u c?u ??t l?i m?t kh?u thï¿½t b?i: {0}
+auth.forgot.empty=Email khï¿½ng ???c ?? tr?ng
+auth.forgot.notfound=Email khï¿½ng t?n t?i
+auth.forgot.pending=Email ?ang ch? xï¿½c minh ??ng kï¿½
+auth.reset.success=??t l?i m?t kh?u thï¿½nh cï¿½ng. B?n cï¿½ th? ??ng nh?p ngay
 auth.reset.failed=??t l?i m?t kh?u th?t b?i: {0}
-auth.reset.code.empty=Mã ??t l?i không ???c ?? tr?ng
-auth.reset.code.invalid=Mã ??t l?i m?t kh?u không h?p l?
-auth.reset.code.expired=Mã ??t l?i m?t kh?u ?ã h?t h?n
-auth.reset.code.notforreset=Mã này không dùng ?? ??t l?i m?t kh?u
-auth.reset.password.short=M?t kh?u m?i ph?i t? 8 kı t? tr? lên
-auth.reset.password.mismatch=M?t kh?u xác nh?n không kh?p
-auth.logout.success=??ng xu?t thành công. Token ?ã b? vô hi?u hóa
-auth.logout.invalid=Token không h?p l?
-auth.logout.expired=Token không h?p l? ho?c ?ã h?t h?n
-auth.logout.error=L?i khi x? lı token: {0}
+auth.reset.code.empty=Mï¿½ ??t l?i khï¿½ng ???c ?? tr?ng
+auth.reset.code.invalid=Mï¿½ ??t l?i m?t kh?u khï¿½ng h?p l?
+auth.reset.code.expired=Mï¿½ ??t l?i m?t kh?u ?ï¿½ h?t h?n
+auth.reset.code.notforreset=Mï¿½ nï¿½y khï¿½ng dï¿½ng ?? ??t l?i m?t kh?u
+auth.reset.password.short=M?t kh?u m?i ph?i t? 8 kï¿½ t? tr? lï¿½n
+auth.reset.password.mismatch=M?t kh?u xï¿½c nhï¿½n khï¿½ng kh?p
+auth.logout.success=??ng xu?t thï¿½nh cï¿½ng. Token ?ï¿½ b? vï¿½ hi?u hï¿½a
+auth.logout.invalid=Token khï¿½ng h?p l?
+auth.logout.expired=Token khï¿½ng h?p l? ho?c ?ï¿½ h?t h?n
+auth.logout.error=L?i khi x? lï¿½ token: {0}
 
 # Booking
-booking.create.success=??t vé thành công v?i ID: {0}
-booking.create.failed=??t vé th?t b?i: {0}
-booking.seats.success=Ch?n gh? thành công
+booking.create.success=??t vï¿½ thï¿½nh cï¿½ng v?i ID: {0}
+booking.create.failed=??t vï¿½ th?t b?i: {0}
+booking.seats.success=Ch?n gh? thï¿½nh cï¿½ng
 booking.seats.failed=Ch?n gh? th?t b?i: {0}
-booking.seats.get.failed=L?y danh sách gh? th?t b?i: {0}
-booking.stats.success=Thành công khi l?y th?ng kê ??t vé
-booking.stats.failed=L?y th?ng kê ??t vé th?t b?i: {0}
+booking.seats.get.failed=L?y danh sï¿½ch gh? th?t b?i: {0}
+booking.stats.success=Thï¿½nh cï¿½ng khi l?y th?ng kï¿½ ??t vï¿½
+booking.stats.failed=L?y th?ng kï¿½ ??t vï¿½ th?t b?i: {0}
 
 # Movie Public
-movie.inactive=Phim không t?n t?i ho?c không ho?t ??ng
+movie.inactive=Phim khï¿½ng tï¿½n t?i ho?c khï¿½ng hoï¿½t ??ng
 
 # Showtime Seat
-seat.notfound=Gh? {0} không t?n t?i
-seat.locked=Gh? {0} không kh? d?ng
-seat.lock.success=Gh? {0} ?ã khóa thành công
-seat.unlock.success=Gh? {0} ?ã ???c m? khóa
+seat.notfound=Gh? {0} khï¿½ng tï¿½n t?i
+seat.locked=Gh? {0} khï¿½ng kh? d?ng
+seat.lock.success=Gh? {0} ?ï¿½ khï¿½a thï¿½nh cï¿½ng
+seat.unlock.success=Gh? {0} ?ï¿½ ???c m? khï¿½a
+
+# User Profile Management
+auth.password.change.success=Äá»•i máº­t kháº©u thÃ nh cÃ´ng
+auth.password.old.incorrect=Máº­t kháº©u cÅ© khÃ´ng Ä‘Ãºng
+auth.password.confirm.mismatch=Máº­t kháº©u xÃ¡c nháº­n khÃ´ng khá»›p
+auth.password.short=Máº­t kháº©u pháº£i cÃ³ Ã­t nháº¥t 8 kÃ½ tá»±
+user.profile.update.success=Cáº­p nháº­t thÃ´ng tin cÃ¡ nhÃ¢n thÃ nh cÃ´ng
+user.name.required=Há» tÃªn khÃ´ng Ä‘Æ°á»£c Ä‘á»ƒ trá»‘ng
+user.not.found=KhÃ´ng tÃ¬m tháº¥y ngÆ°á»i dÃ¹ng
 
 # Validation Messages
-validation.email.empty=Email không ???c ?? tr?ng
-validation.email.invalid=Email không h?p l?
-validation.password.empty=M?t kh?u không ???c ?? tr?ng
-validation.password.short=M?t kh?u ph?i có ít nh?t 8 kı t?
-validation.confirmPassword.empty=Vui lòng xác nh?n l?i m?t kh?u
-validation.name.empty=H? tên không ???c ?? tr?ng
-validation.phone.empty=S? ?i?n tho?i không ???c ?? tr?ng
-validation.phone.invalid=S? ?i?n tho?i không h?p l? (ph?i có 10 ch? s?, b?t ??u b?ng 0)
-validation.movie.name.empty=Tên phim không ???c ?? tr?ng
-validation.role.empty=Vai trò không ???c ?? tr?ng
+validation.email.empty=Email khï¿½ng ???c ?? tr?ng
+validation.email.invalid=Email khï¿½ng h?p l?
+validation.password.empty=M?t kh?u khï¿½ng ???c ?? tr?ng
+validation.password.short=M?t kh?u ph?i cï¿½ ï¿½t nh?t 8 kï¿½ t?
+validation.confirmPassword.empty=Vui lï¿½ng xï¿½c nh?n l?i m?t kh?u
+validation.name.empty=H? tï¿½n khï¿½ng ???c ?? tr?ng
+validation.phone.empty=S? ?i?n tho?i khï¿½ng ???c ?? tr?ng
+validation.phone.invalid=S? ?i?n tho?i khï¿½ng h?p l? (ph?i cï¿½ 10 ch? s?, b?t ??u b?ng 0)
+validation.movie.name.empty=Tï¿½n phim khï¿½ng ???c ?? tr?ng
+validation.role.empty=Vai trï¿½ khï¿½ng ???c ?? tr?ng
