fix change password

--- a/backend/movie_booking/src/main/resources/messages_en.properties
+++ b/backend/movie_booking/src/main/resources/messages_en.properties
@@ -86,6 +86,16 @@ seat.locked=Seat {0} is not available
 seat.lock.success=Seat {0} locked successfully
 seat.unlock.success=Seat {0} unlocked successfully
 
+# User Profile Management
+auth.password.change.success=Password changed successfully
+auth.password.old.incorrect=Old password is incorrect
+auth.password.confirm.mismatch=Password confirmation does not match
+auth.password.short=Password must be at least 8 characters
+auth.password.empty=Password cannot be empty
+user.profile.update.success=Profile updated successfully
+user.name.required=Full name is required
+user.not.found=User not found
+
 # Validation Messages
 validation.email.empty=Email cannot be empty
 validation.email.invalid=Invalid email address
