--- a/backend/movie_booking/src/main/resources/messages_en.properties
+++ b/backend/movie_booking/src/main/resources/messages_en.properties
@@ -96,6 +96,17 @@ user.profile.update.success=Profile updated successfully
 user.name.required=Full name is required
 user.not.found=User not found
 
+# Promotion/Discount
+promotion.code.empty=Promotion code cannot be empty
+promotion.code.invalid=Invalid or expired promotion code
+promotion.min.order.not.met=Minimum order amount {0} required to apply this code
+promotion.apply.success=Promotion code applied successfully
+promotion.apply.failed=Failed to apply promotion code
+promotion.usage.limit.exceeded=Promotion code usage limit exceeded
+promotion.expired=Promotion code has expired
+promotion.not.started=Promotion code is not yet active
+promotion.validation.error=Error occurred while validating promotion code
+
 # Validation Messages
 validation.email.empty=Email cannot be empty
 validation.email.invalid=Invalid email address
